Fixed nav menu not showing anymore. Adjusted font sizing for body on desktop and mobile. Adjusted padding in "About Us" section for better spacing of elements.

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
   z-index: 1;
   top: 10vh;
   max-width: 1366px;
+  font-size: 1.5rem;
 }
 
 /* Expanded header logo styling */
@@ -306,7 +307,6 @@ ul li {
         -ms-flex-align: center;
             align-items: center;
     width: 80%;
-    display: none;
     -webkit-transition: -webkit-transform 0.3s ease-in;
     transition: -webkit-transform 0.3s ease-in;
     transition: transform 0.3s ease-in;
@@ -330,11 +330,16 @@ ul li {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
             flex: 1 1 100%;
+    padding: 2%;
   }
   .rightSection {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
             flex: 1 1 100%;
+    padding: 2%;
+  }
+  .body {
+    font-size: 1.2rem;
   }
 }
 
